@@ -5,6 +5,9 @@ Griffith ChangeLog
 (c) 2005-2009  Vasco Nunes, Piotr Ożarowski
 
 
+2009-05-05  Michael Jahn
+	* added MovieMeter plugin
+
 2009-04-17  Michael Jahn
 	* updated FilmAffinity plugin
 	* updated Filmtipset plugin
